correctif z-index marqueurs rouges #38080

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -1228,6 +1228,10 @@ table:not(.infobox):not(.infobox-actu) {
 	text-align: center;
 }
 
+img[src="/assets/pin.png"] {
+	z-index: 999!important;
+}
+
 // Gallery boxes
 li.gallerybox {
 	background-color: $white;
